--- a/app/src/main/res/layout/card_class_details_general.xml
+++ b/app/src/main/res/layout/card_class_details_general.xml
@@ -1,152 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_general_details"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="4dp"
-    app:cardCornerRadius="2dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginLeft="8dp"
-    app:cardElevation="2dp">
-
-    <LinearLayout
-        android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools">
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_general_details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        app:cardCornerRadius="2dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginLeft="16dp"
-        android:paddingBottom="8dp">
+        android:layout_marginLeft="8dp"
+        app:cardElevation="2dp">
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="8dp">
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="16dp"
+            android:paddingBottom="8dp">
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                app:srcCompat="@drawable/ic_clock_black_24dp"
-                android:tint="#000"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="8dp">
 
-            <TextView
-                android:id="@+id/tv_class_credits"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_centerVertical="true"
-                android:fontFamily="@font/roboto_regular"
-                android:textColor="@color/primaryText"
-                android:textSize="13sp"
-                tools:text="Carga Horária: 60h"/>
-        </RelativeLayout>
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    app:srcCompat="@drawable/ic_clock_black_24dp"
+                    android:tint="#000"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="8dp">
+                <TextView
+                    android:id="@+id/tv_class_credits"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/roboto_regular"
+                    android:textColor="@color/primaryText"
+                    android:textSize="13sp"
+                    tools:text="Carga Horária: 60h"/>
+            </RelativeLayout>
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                app:srcCompat="@drawable/ic_calendar_black_24dp"
-                android:tint="#000"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="8dp">
 
-            <TextView
-                android:id="@+id/tv_class_period"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_centerVertical="true"
-                android:fontFamily="@font/roboto_regular"
-                android:textColor="@color/primaryText"
-                android:textSize="13sp"
-                tools:text="Periodo Letivo: 01/06/2017 a 31/11/2017"/>
-        </RelativeLayout>
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    app:srcCompat="@drawable/ic_calendar_black_24dp"
+                    android:tint="#000"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="8dp">
+                <TextView
+                    android:id="@+id/tv_class_period"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/roboto_regular"
+                    android:textColor="@color/primaryText"
+                    android:textSize="13sp"
+                    tools:text="Periodo Letivo: 01/06/2017 a 31/11/2017"/>
+            </RelativeLayout>
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                app:srcCompat="@drawable/ic_grades_black_24dp"
-                android:tint="#000"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="8dp">
 
-            <TextView
-                android:id="@+id/tv_class_teacher"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_centerVertical="true"
-                android:fontFamily="@font/roboto_regular"
-                android:textColor="@color/primaryText"
-                android:textSize="13sp"
-                tools:text="Professor: Angelo Conrado Loula"/>
-        </RelativeLayout>
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    app:srcCompat="@drawable/ic_grades_black_24dp"
+                    android:tint="#000"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="8dp">
+                <TextView
+                    android:id="@+id/tv_class_teacher"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/roboto_regular"
+                    android:textColor="@color/primaryText"
+                    android:textSize="13sp"
+                    tools:text="Professor: Angelo Conrado Loula"/>
+            </RelativeLayout>
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                app:srcCompat="@drawable/ic_building_black_24dp"
-                android:tint="#000"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="8dp">
 
-            <TextView
-                android:id="@+id/tv_class_department"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_centerVertical="true"
-                android:fontFamily="@font/roboto_regular"
-                android:textColor="@color/primaryText"
-                android:textSize="13sp"
-                tools:text="Departamento de Tecnologia"/>
-        </RelativeLayout>
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    app:srcCompat="@drawable/ic_building_black_24dp"
+                    android:tint="#000"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginTop="8dp">
+                <TextView
+                    android:id="@+id/tv_class_department"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/roboto_regular"
+                    android:textColor="@color/primaryText"
+                    android:textSize="13sp"
+                    tools:text="Departamento de Tecnologia"/>
+            </RelativeLayout>
 
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                app:srcCompat="@drawable/ic_info_outline_black_24dp"
-                android:tint="#000"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="8dp">
 
-            <TextView
-                android:id="@+id/tv_class_miss_limit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
-                android:layout_marginStart="40dp"
-                android:layout_centerVertical="true"
-                android:fontFamily="@font/roboto_regular"
-                android:textColor="@color/primaryText"
-                android:textSize="13sp"
-                tools:text="Limite de Faltas: 15 faltas"/>
-        </RelativeLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_centerVertical="true"
+                    app:srcCompat="@drawable/ic_info_outline_black_24dp"
+                    android:tint="#000"/>
+
+                <TextView
+                    android:id="@+id/tv_class_miss_limit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="40dp"
+                    android:layout_marginStart="40dp"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/roboto_regular"
+                    android:textColor="@color/primaryText"
+                    android:textSize="13sp"
+                    tools:text="Limite de Faltas: 15 faltas"/>
+            </RelativeLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</layout>
