--- a/app/src/main/res/layout/card_class_details_misses.xml
+++ b/app/src/main/res/layout/card_class_details_misses.xml
@@ -1,77 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_missed_classes"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginLeft="8dp"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="2dp">
-
-    <LinearLayout
-        android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools">
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_missed_classes"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
-        android:paddingBottom="8dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="2dp">
 
-        <RelativeLayout
-            android:layout_width="30dp"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/iv_icon_class_missed"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                app:srcCompat="@drawable/ic_tag_faces_happy_black_24dp"
-                android:layout_centerVertical="true"
-                android:tint="#000"/>
-        </RelativeLayout>
-
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="72dp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp">
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp"
+            android:paddingBottom="8dp">
 
-            <TextView
-                android:id="@+id/tv_classes_missed"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="14sp"
-                android:textColor="@color/primaryText"
-                android:fontFamily="@font/roboto_medium"
-                tools:text="Você já faltou 14 aulas"/>
+            <RelativeLayout
+                android:layout_width="30dp"
+                android:layout_height="match_parent">
 
-            <ProgressBar
-                android:id="@+id/pb_classes_missed"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_classes_missed"
-                android:layout_marginTop="4dp"
-                style="?android:attr/progressBarStyleHorizontal"
-                tools:progress="90"/>
+                <ImageView
+                    android:id="@+id/iv_icon_class_missed"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    app:srcCompat="@drawable/ic_tag_faces_happy_black_24dp"
+                    android:layout_centerVertical="true"
+                    android:tint="#000"/>
+            </RelativeLayout>
 
-            <TextView
-                android:id="@+id/tv_miss_remain"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:layout_below="@id/pb_classes_missed"
-                android:textColor="@color/primaryText"
-                android:fontFamily="@font/roboto_medium"
-                android:layout_marginTop="2dp"
-                tools:text="Você ainda pode faltar 1 aula"/>
-        </RelativeLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+                android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp">
+
+                <TextView
+                    android:id="@+id/tv_classes_missed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textColor="@color/primaryText"
+                    android:fontFamily="@font/roboto_medium"
+                    tools:text="Você já faltou 14 aulas"/>
+
+                <ProgressBar
+                    android:id="@+id/pb_classes_missed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_classes_missed"
+                    android:layout_marginTop="4dp"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    tools:progress="90"/>
+
+                <TextView
+                    android:id="@+id/tv_miss_remain"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:layout_below="@id/pb_classes_missed"
+                    android:textColor="@color/primaryText"
+                    android:fontFamily="@font/roboto_medium"
+                    android:layout_marginTop="2dp"
+                    tools:text="Você ainda pode faltar 1 aula"/>
+            </RelativeLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</layout>
