--- a/app/src/main/res/layout/fragment_auto_sync.xml
+++ b/app/src/main/res/layout/fragment_auto_sync.xml
@@ -1,68 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="?attr/color_primary">
-
-    <LinearLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_centerInParent="true">
+        android:layout_height="match_parent"
+        android:background="?attr/color_primary">
 
         <LinearLayout
-            android:id="@+id/ll_logos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_centerInParent="true">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/ivLogo"
-                android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:layout_weight=".5"
-                android:src="@drawable/ic_unes_large_image_512"/>
+            <LinearLayout
+                android:id="@+id/ll_logos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/ivAndroid"
-                android:layout_width="0dp"
-                android:layout_height="120dp"
-                android:layout_weight=".5"
-                android:tint="@color/android_green"
-                app:srcCompat="@drawable/ic_android_black_24dp"
-                android:contentDescription="@string/android"/>
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/ivLogo"
+                    android:layout_width="0dp"
+                    android:layout_height="120dp"
+                    android:layout_weight=".5"
+                    android:src="@drawable/ic_unes_large_image_512"/>
+
+                <ImageView
+                    android:id="@+id/ivAndroid"
+                    android:layout_width="0dp"
+                    android:layout_height="120dp"
+                    android:layout_weight=".5"
+                    android:tint="@color/android_green"
+                    app:srcCompat="@drawable/ic_android_black_24dp"
+                    android:contentDescription="@string/android"/>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:text="@string/disabled_code_warning"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/roboto_medium"/>
         </LinearLayout>
 
-        <TextView
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/btn_continue"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:text="@string/disabled_code_warning"
-            android:gravity="center"
-            android:textSize="15sp"
+            android:layout_height="50dp"
+            android:layout_gravity="end"
+            android:text="@string/update_app"
             android:textColor="@color/white"
-            android:fontFamily="@font/roboto_medium"/>
-    </LinearLayout>
-
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btn_continue"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_gravity="end"
-        android:text="@string/update_app"
-        android:textColor="@color/white"
-        style="@style/Base.Widget.AppCompat.Button.Colored"
-        android:fontFamily="@font/roboto_medium"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_margin="16dp"/>
-</RelativeLayout>
+            style="@style/Base.Widget.AppCompat.Button.Colored"
+            android:fontFamily="@font/roboto_medium"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="16dp"/>
+    </RelativeLayout>
+</layout>
