--- a/app/src/main/res/layout/fragment_discipline_details.xml
+++ b/app/src/main/res/layout/fragment_discipline_details.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.forcetower.uefs.view.connected.fragments.DisciplineDetailsFragment">
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/container"
-        android:layout_below="@id/inc_toolbar"
+    xmlns:tools="http://schemas.android.com/tools">
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        tools:context="com.forcetower.uefs.view.connected.fragments.DisciplineDetailsFragment">
 
-</RelativeLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/container"
+            android:layout_below="@id/inc_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    </RelativeLayout>
+</layout>
