--- a/app/src/main/res/layout/fragment_discipline_grades.xml
+++ b/app/src/main/res/layout/fragment_discipline_grades.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
-        android:orientation="vertical"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:paddingBottom="8dp"
-        android:clipToPadding="false">
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:paddingBottom="8dp"
+            android:clipToPadding="false">
 
-        <include layout="@layout/card_class_details_grades_situation"/>
-        <include layout="@layout/card_class_details_grades_mean"/>
-        <include layout="@layout/card_class_details_grades"/>
-    </LinearLayout>
-</ScrollView>
+            <include android:id="@+id/situation" layout="@layout/card_class_details_grades_situation"/>
+            <include android:id="@+id/mean" layout="@layout/card_class_details_grades_mean"/>
+            <include android:id="@+id/grades" layout="@layout/card_class_details_grades"/>
+        </LinearLayout>
+    </ScrollView>
+</layout>
