--- a/app/src/main/res/layout/fragment_semester_grades.xml
+++ b/app/src/main/res/layout/fragment_semester_grades.xml
@@ -1,42 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="8dp"
-        android:clipToPadding="false"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-    </android.support.v7.widget.RecyclerView>
-
     <RelativeLayout
-        android:id="@+id/vg_loading"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible">
+        android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/pb_loading"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:indeterminate="true"/>
+            android:layout_height="match_parent"
+            android:paddingBottom="8dp"
+            android:clipToPadding="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        </android.support.v7.widget.RecyclerView>
 
-        <TextView
+        <RelativeLayout
+            android:id="@+id/vg_loading"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/pb_loading"
-            android:text="@string/retrieving_data"
-            android:padding="8dp"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:textColor="@color/primaryText"
-            android:fontFamily="@font/roboto_regular"/>
+            android:layout_height="match_parent"
+            android:visibility="visible">
+
+            <ProgressBar
+                android:id="@+id/pb_loading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:indeterminate="true"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/pb_loading"
+                android:text="@string/retrieving_data"
+                android:padding="8dp"
+                android:gravity="center"
+                android:textSize="15sp"
+                android:textColor="@color/primaryText"
+                android:fontFamily="@font/roboto_regular"/>
+        </RelativeLayout>
+
     </RelativeLayout>
-
-</RelativeLayout>
+</layout>
