--- a/app/src/main/res/layout/fragment_the_adventure.xml
+++ b/app/src/main/res/layout/fragment_the_adventure.xml
@@ -1,92 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimary">
-
-    <ScrollView
+    xmlns:tools="http://schemas.android.com/tools">
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="50dp"
-        android:paddingBottom="50dp"
-        android:clipToPadding="false">
+        android:background="@color/colorPrimary">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:animateLayoutChanges="true">
+            android:layout_height="match_parent"
+            android:paddingTop="50dp"
+            android:paddingBottom="50dp"
+            android:clipToPadding="false">
 
-            <TextView
-                android:id="@+id/tv_location_explained"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/adventure_confirm_location"
-                android:textColor="@color/white"
-                android:fontFamily="@font/roboto_medium"
-                android:gravity="center"
-                android:textSize="14sp"
-                android:visibility="gone"
-                tools:visibility="visible"/>
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:animateLayoutChanges="true">
 
-            <RelativeLayout
-                android:layout_width="100dp"
-                android:layout_height="140dp"
-                android:layout_gravity="center">
+                <TextView
+                    android:id="@+id/tv_location_explained"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/adventure_confirm_location"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/roboto_medium"
+                    android:gravity="center"
+                    android:textSize="14sp"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
 
-                <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:layout_marginBottom="-8dp"
-                    app:srcCompat="@drawable/ic_crown_black_24dp"
-                    android:layout_above="@id/iv_unes_confirm_location"
-                    android:rotation="-30"
-                    android:tint="#e7e7e7"/>
-
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/iv_unes_confirm_location"
+                <RelativeLayout
                     android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:layout_alignParentBottom="true"
+                    android:layout_height="140dp"
+                    android:layout_gravity="center">
+
+                    <ImageView
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_marginBottom="-8dp"
+                        app:srcCompat="@drawable/ic_crown_black_24dp"
+                        android:layout_above="@id/iv_unes_confirm_location"
+                        android:rotation="-30"
+                        android:tint="#e7e7e7"/>
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/iv_unes_confirm_location"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_alignParentBottom="true"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_unes_large_image_512"
+                        android:clickable="true"
+                        android:focusable="true"/>
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/tv_adventure_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/ic_unes_large_image_512"
-                    android:clickable="true"
-                    android:focusable="true"/>
-            </RelativeLayout>
+                    android:padding="16dp"
+                    android:text="@string/unes_the_adventure_desc"
+                    android:textColor="@color/white"
+                    android:fontFamily="@font/roboto_medium"/>
 
-            <TextView
-                android:id="@+id/tv_adventure_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:padding="16dp"
-                android:text="@string/unes_the_adventure_desc"
-                android:textColor="@color/white"
-                android:fontFamily="@font/roboto_medium"/>
+                <Button
+                    android:id="@+id/btn_join_adventure"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="16dp"
+                    style="@style/Base.Widget.AppCompat.Button.Colored"
+                    android:text="@string/unes_the_adventure_join"
+                    android:fontFamily="@font/roboto_regular"/>
 
-            <Button
-                android:id="@+id/btn_join_adventure"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="16dp"
-                style="@style/Base.Widget.AppCompat.Button.Colored"
-                android:text="@string/unes_the_adventure_join"
-                android:fontFamily="@font/roboto_regular"/>
-
-            <Button
-                android:id="@+id/btn_logout_adventure"
-                android:layout_width="200dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_gravity="center_horizontal"
-                style="@style/Base.Widget.AppCompat.Button.Colored"
-                android:text="@string/unes_the_adventure_logout"/>
-        </LinearLayout>
-    </ScrollView>
-</android.support.design.widget.CoordinatorLayout>
+                <Button
+                    android:id="@+id/btn_logout_adventure"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_gravity="center_horizontal"
+                    style="@style/Base.Widget.AppCompat.Button.Colored"
+                    android:text="@string/unes_the_adventure_logout"/>
+            </LinearLayout>
+        </ScrollView>
+    </android.support.design.widget.CoordinatorLayout>
+</layout>
